739889: TISPRDT-1582: Sticky header UI alignment is not proper for tablet view, TISPRDT-1581: Order status box bottom border is missing in track order pop up for mobile and tablet view -- fixes

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
@@ -70533,6 +70533,10 @@ body .right-account .order-details .deliveryTrack .dot-arrow:last-of-type{
 body .account .right-account .order-history.order-details li.item .status>ul>li.progress:last-of-type .message {
     margin-left: 8px;
 }
+body.template-pages-account-accountOrderHistoryPage .account .right-account .order-history .product-block li.header>ul>li.trackOrderAnchor{
+		right: 0px;	/* TISPRDT-1582 fix */
+		padding-left: 34px;	/* TISPRDT-1582 fix */
+}
 }
 @media (max-width: 650px) {
 	body .right-account .order-details .deliveryTrack .dot-arrow {
